app/components/wave/wave.css
.section-wave{
    position: absolute;
    bottom: 0;
    left: 0;

    width: 100%;
    height: 220px;

    overflow: hidden;
    position: none;
    z-index: 1;

    background-color: #F5EBDD;
}

.section-wave .wave{
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100px;

    background: url('/assets/wave.png');
    background-size: 1000px 100px;
}

.section-wave .wave.wave1{
    animation: animate 30s linear infinite;
    z-index: 1000;
    opacity: 1;
    animation-delay: 0s;
    bottom: 0;
}

.section-wave .wave.wave2{
    animation: animate2 10s linear infinite;
    z-index: 999;
    opacity: 0.5;
    animation-delay: -5s;
    bottom: 10px;
}

.section-wave .wave.wave3{
    animation: animate 25s linear infinite;
    z-index: 998;
    opacity: 0.2;
    animation-delay: -2s;
    bottom: 15px;
}

.section-wave .wave.wave4{
    animation: animate2 25s linear infinite;
    z-index: 997;
    opacity: 0.7;
    animation-delay: -5s;
    bottom: 10px;
}

@keyframes animate {
    0%{
        background-position: 0 ;
    }
    100%{
        background-position: 1000px ;
    }
}

@keyframes animate2 {
    0%{
        background-position: 0 ;
    }
    100%{
        background-position: -1000px ;
    }
}

